--- a/src/main/resources/com/example/chatapplication/client.fxml
+++ b/src/main/resources/com/example/chatapplication/client.fxml
@@ -4,13 +4,25 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="ClientAp" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatapplication.controller.Client">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatapplication.controller.Client">
    <children>
-      <TextArea fx:id="ClientTextArea" layoutX="38.0" layoutY="23.0" prefHeight="200.0" prefWidth="526.0" />
-      <TextField fx:id="ClientTextField" layoutX="38.0" layoutY="279.0" prefHeight="56.0" prefWidth="348.0" promptText="Enter your msg here" />
-      <Button fx:id="btnClientSend" layoutX="399.0" layoutY="279.0" mnemonicParsing="false" onAction="#btnClientSendOnAction" prefHeight="56.0" prefWidth="164.0" text="Send" />
-      <Label fx:id="lblError" layoutX="38.0" layoutY="344.0" prefHeight="18.0" prefWidth="348.0" />
+      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <Label layoutX="286.0" layoutY="14.0" text="Client">
+               <font>
+                  <Font name="System Bold" size="22.0" />
+               </font>
+            </Label>
+            <TextArea fx:id="txtArea" layoutX="20.0" layoutY="53.0" prefHeight="300.0" prefWidth="411.0" />
+            <TextField fx:id="txtMessage" layoutX="20.0" layoutY="360.0" prefHeight="25.0" prefWidth="411.0" />
+            <Button layoutX="492.0" layoutY="361.0" mnemonicParsing="false" onAction="#sendOnAction" prefHeight="25.0" prefWidth="84.0" text="SEND" />
+            <Button layoutX="436.0" layoutY="361.0" mnemonicParsing="false" onAction="#sendImageOnAction" prefHeight="25.0" prefWidth="53.0" text="File" />
+            <ImageView fx:id="imageView" fitHeight="300.0" fitWidth="148.0" layoutX="438.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
