--- a/src/main/resources/com/example/chatapplication/client.fxml
+++ b/src/main/resources/com/example/chatapplication/client.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatapplication.controller.Client">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatapplication.controller.Client">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane prefHeight="430.0" prefWidth="600.0">
          <children>
             <Label layoutX="286.0" layoutY="14.0" text="Client">
                <font>
@@ -19,8 +20,11 @@
             </Label>
             <TextArea fx:id="txtArea" layoutX="20.0" layoutY="53.0" prefHeight="300.0" prefWidth="411.0" />
             <TextField fx:id="txtMessage" layoutX="20.0" layoutY="360.0" prefHeight="25.0" prefWidth="411.0" />
-            <Button layoutX="492.0" layoutY="361.0" mnemonicParsing="false" onAction="#sendOnAction" prefHeight="25.0" prefWidth="84.0" text="SEND" />
-            <Button layoutX="436.0" layoutY="361.0" mnemonicParsing="false" onAction="#sendImageOnAction" prefHeight="25.0" prefWidth="53.0" text="File" />
+            <Button layoutX="525.0" layoutY="360.0" mnemonicParsing="false" onAction="#sendOnAction" prefHeight="26.0" prefWidth="61.0" text="SEND" />
+<!--            <Button layoutX="436.0" layoutY="361.0" mnemonicParsing="false" onAction="#sendImageOnAction" prefHeight="25.0" prefWidth="53.0" text="File" />-->
+            <Button layoutX="438.0" layoutY="360.0" mnemonicParsing="false" onAction="#sendDocumentOnAction" prefHeight="26.0" prefWidth="73.0" text="Send Doc" />
+            <Button fx:id="btnDownload" disable="true" layoutX="438.0" layoutY="390.0" mnemonicParsing="false" onAction="#downloadOnAction" prefHeight="26.0" prefWidth="73.0" text="Download" />
+            <ProgressBar fx:id="progressBar" layoutX="20.0" layoutY="394.0" prefWidth="411.0" progress="0.0" />
             <ImageView fx:id="imageView" fitHeight="300.0" fitWidth="148.0" layoutX="438.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
