--- a/src/main/resources/com/example/chatapplication/server.fxml
+++ b/src/main/resources/com/example/chatapplication/server.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -10,7 +11,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatapplication.controller.Server">
    <children>
-      <AnchorPane layoutX="-1.0" prefHeight="400.0" prefWidth="600.0">
+      <AnchorPane layoutX="-1.0" prefHeight="424.0" prefWidth="600.0">
          <children>
             <Label layoutX="286.0" layoutY="21.0" text="Server">
                <font>
@@ -19,9 +20,12 @@
             </Label>
             <TextArea fx:id="txtArea" layoutX="23.0" layoutY="53.0" prefHeight="290.0" prefWidth="398.0" />
             <TextField fx:id="txtMessage" layoutX="23.0" layoutY="355.0" prefHeight="25.0" prefWidth="397.0" />
-            <Button layoutX="502.0" layoutY="355.0" mnemonicParsing="false" onAction="#sendOnAction" prefHeight="25.0" prefWidth="84.0" text="SEND" />
-            <Button layoutX="433.0" layoutY="355.0" mnemonicParsing="false" onAction="#sendImageOnAction" prefHeight="25.0" prefWidth="53.0" text="File" />
+            <Button layoutX="528.0" layoutY="355.0" mnemonicParsing="false" onAction="#sendOnAction" prefHeight="26.0" prefWidth="58.0" text="SEND" />
+<!--            <Button layoutX="433.0" layoutY="355.0" mnemonicParsing="false" onAction="#sendImageOnAction" prefHeight="25.0" prefWidth="53.0" text="File" />-->
+            <Button layoutX="433.0" layoutY="355.0" mnemonicParsing="false" onAction="#sendDocumentOnAction" prefHeight="25.0" prefWidth="84.0" text="Send Doc" />
             <ImageView fx:id="imageView" fitHeight="290.0" fitWidth="153.0" layoutX="433.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="btnDownload" layoutX="438.0" layoutY="390.0" mnemonicParsing="false" onAction="#downloadOnAction" prefHeight="26.0" prefWidth="73.0" text="Download" disable="true" />
+            <ProgressBar fx:id="progressBar" layoutX="20.0" layoutY="390.0" prefWidth="411.0" progress="0.0" />
          </children>
       </AnchorPane>
    </children>
